--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <!-- ID de cliente Google -->
+    <meta name="google-signin-client_id" content="965177956463-658k64p74c9lkruhu6roa0h6a1n99upo.apps.googleusercontent.com">
     <title>Document</title>
 </head>
 <body>
-    <h1>Acceso denegado</h1>
+
+    <h1>Google SingIn</h1>
+
+    <!-- Botón inciar sesión-->
+    <div 
+        class="g-signin2" 
+        data-onsuccess="onSignIn">
+    </div>
+
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+    <!-- Cerrar sesión -->
+    <button 
+        type="button" 
+        class="btn btn-danger mt-5" 
+        href="#" 
+        onclick="signOut();">
+        Sign out
+    </button>
+
+    <!-- Script para iniciar sesión con Gmail -->
+    <script>
+
+        console.log(window.location.hostname.includes('localhost'));
+
+        const url = ( window.location.hostname.includes('localhost') ) 
+                    ? 'http://localhost:8080/api/auth/google' 
+                    : 'http://localhost:8080/api/auth/google'
+
+        function onSignIn(googleUser) {
+            var profile = googleUser.getBasicProfile();
+            console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+            console.log('Name: ' + profile.getName());
+            console.log('Image URL: ' + profile.getImageUrl());
+            console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+
+            var id_token = googleUser.getAuthResponse().id_token;
+            const data = { id_token }
+            console.log(id_token);
+
+            fetch( url, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify( data )
+            })
+            .then( resp => resp.json() )
+            .then( data => console.log( 'Nuestro server', data ) )
+            .catch( console.log );
+        }
+    </script>
+
+    <!-- Script para cerrar sesión -->
+    <script>
+        function signOut() {
+        var auth2 = gapi.auth2.getAuthInstance();
+        auth2.signOut().then(function () {
+            console.log('User signed out.');
+        });
+        }
+    </script>
+
 </body>
 </html>
